--- a/src/App.css
+++ b/src/App.css
@@ -8,16 +8,33 @@ body {
   line-height: 1.6;
 }
 
-/* navbar */
 .navbar {
   background-color: #2c68ea;
   padding: 1rem 2rem;
   display: flex;
-  /* spacing between buttons in nav bar */
-  gap: 1.5rem;  
-  justify-content: center;
+  align-items: center; /*  ensures vertical centering */
+  justify-content: space-between;
+  position: relative;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
+
+
+#logo {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.nav-links {
+  display: flex;
+  gap: 1.5rem;
+  margin: 0 auto;
+  /* position: absolute; */
+  /* left: 50%; */
+  transform: translateX(-10%);
+}
+
 
 /* styles links in navbar */
 .navbar a {
@@ -213,7 +230,7 @@ button:hover {
   padding: 1.5rem;
   margin-bottom: 1rem;
   border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: all 0.3s;
   border-left: 4px solid #2563eb;
   position: relative;
@@ -243,7 +260,7 @@ button:hover {
 
 .status.apply {
   background: #e8f5e9;
-  color: #a5b706;
+  color: #e2a600;
 }
 
 
@@ -266,6 +283,10 @@ button:hover {
   background: #e8f5e9;
   color: #2e7d32;
   font-weight: bold;
+}
+
+#dashstatus {
+  margin-left: 10px;
 }
 
 
